# study

./: .clang-format  .clang-tidy  .editorconfig  .envrc  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  conanfile.py
.github/workflows/: ci.yml  format.yml  release.yml
cmake/: configversion.cmake.in  utils.cmake
docs/: 24周学习AI提示词手册.md  24周跳槽学习计划书.md
scripts/: normalize_text.py  run_clang_format.sh
src/: CMakeLists.txt  main.cpp
src/cppsharp/: my_lib.cpp  my_lib.hpp
tests/: CMakeLists.txt  main_test.cpp
